# Troveas_daily_report_automation

./: LICENSE  README.md  agents.py  crew.py  debug_encoding.py  main.py  pyproject.toml  record_api_error.py  requirements.txt  run.py  tasks.py
config/: agents.yaml  tasks.yaml
knowledge/: user_preference.txt
tools/: custom_tool.py
